[package]
name = "egui_litecode"
version = "0.1.2"
edition = "2024"
authors = ["Hryhorii Kravtsov kravtsov.hryhorii@gmail.com"]
description = "Basical egui code editor with syntax highlighting"
license = "MIT"
repository = "https://github.com/hrykr/egui-litecode"
homepage = "https://github.com/hrykr/egui-litecode"
readme = "README.md"
keywords = ["egui", "code", "code_editor", "syntax_highlighting"]
categories = ["text-editors",
    "gui",
    "visualization",
]

[dependencies]
egui = "0.32.1"
syntect = "5.2"
